# DwarfQuest

./: .gitignore  CMakeLists.txt  DwarfQuest.sln  LICENSE  README.md  compile_commands.json
Assets/Materials/: ExampleMaterial.mat  MinimapMaterial.mat  TerrainMaterial.mat  TestCrate.mat  TestSceneGroundMaterial.mat  TestSceneTempleMaterial.mat
Assets/Shaders/: MinimapShader.glsl  TerrainShader.glsl  TestLitShader.glsl  TestUnlitShader.glsl  testFragmentShader.fsh  testFragmentShader.glsl  testShader.glsl  testVertexShader.glsl  testVertexShader.vsh
Assets/Textures/Terrain/: grass_top_1.jpg~
DwarfQuest/: DwarfQuest.vcxproj  DwarfQuest.vcxproj.filters
DwarfQuest/src/: Application.cpp  Application.h  Input.cpp  Input.h  Main.cpp  Window.cpp  Window.h
DwarfQuest/src/Graphics/OpenGL/: Graphics.cpp  Graphics.h
DwarfQuest/src/Utils/: Logger.cpp
SDL2/: SDL2.vcxproj  SDL2.vcxproj.filters
libs/glad/include/glad/: CMakeLists.txt  glad.h
libs/glad/src/: CMakeLists.txt  glad.c
libs/stb_image/: stb_image.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Debug.properties  configurations.xml  private.xml
src/: Application.cpp  Application.h  CMakeLists.txt  Input.cpp  Input.h  Main.cpp  TestsSetup.h  Window.cpp  Window.h
src/DataStructures/: CMakeLists.txt  Test.h  Tree.h
src/EntitiesBehaviourModel/: CMakeLists.txt  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
src/EntitiesBehaviourModel/Behaviour/: Behaviour.cpp  Behaviour.h  CMakeLists.txt  TestBehaviour.cpp  TestBehaviour.h  TestBehaviourB.cpp  TestBehaviourB.h
src/EntitiesBehaviourModel/Behaviour/GameComponents/: BlocksDefinitions.h  CMakeLists.txt  Minimap.cpp  Minimap.h  Renderer.cpp  Renderer.h  TestBehaviour.cpp  TestBehaviour.h  TestBehaviourB.cpp  TestBehaviourB.h  Transform.cpp  Transform.h  VoxelMeshGenerator.cpp  VoxelMeshGenerator.h  VoxelTerrain.cpp  VoxelTerrain.h
src/Graphics/OpenGL/: CMakeLists.txt  Camera.h  Graphics.cpp  Graphics.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShadersDefinitions.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h
src/ResourceManagement/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  ResourceManager.cpp  ResourceManager.h  ShaderLoader.cpp  ShaderLoader.h  stb_image.cpp
src/SceneManagement/: CMakeLists.txt  Scene.cpp  Scene.h  Test.h
src/Utils/: CMakeLists.txt  Logger.cpp  Logger.h  Testing.cpp  Testing.h
